# Projeto_Docker

./: README.md  app.py  docker-compose.yaml  dockerfile  pyproject.toml
