[project]
name = "projeto-docker"
version = "0.1.0"
description = ""
authors = [
    {name = "LeonArmster",email = "leo.armster1994@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.8"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
